<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <!-- Taxa Mínima -->
    <TextView
        android:id="@+id/text_view_min_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/taxa_minima"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_min_rate" />

    <!-- Taxa Máxima -->
    <TextView
        android:id="@+id/text_view_max_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/taxa_maxima"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_max_rate" />

    <!-- Coluna Taxa Mínima -->
    <LinearLayout
        android:id="@+id/layout_min_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_max_rate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_min_60hz"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:text="@string/_60_hz"
            android:textSize="14sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/text_button_selector" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_min_90hz"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:text="@string/_90_hz"
            android:textSize="14sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/text_button_selector" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_min_120hz"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/_120_hz"
            android:textSize="14sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/text_button_selector" />

    </LinearLayout>

    <!-- Coluna Taxa Máxima -->
    <LinearLayout
        android:id="@+id/layout_max_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/layout_min_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_max_60hz"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:text="@string/_60_hz"
            android:textSize="14sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/text_button_selector" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_max_90hz"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="6dp"
            android:text="@string/_90_hz"
            android:textSize="14sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/text_button_selector" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_max_120hz"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/_120_hz"
            android:textSize="14sp"
            android:background="@drawable/button_selector"
            android:textColor="@color/text_button_selector" />

    </LinearLayout>


    <!-- TextView para exibir a taxa de atualização atual -->
    <TextView
        android:id="@+id/text_view_current_refresh_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxa_atual_placeholder"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_max_rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:text="@string/verificando_permiss_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/status_60_hz_selecionado"/>

    <!-- Botão de Informação -->
    <ImageButton
        android:id="@+id/button_info"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/info_button_description"
        android:src="@drawable/ic_info"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>